primeros pasos con tailwind

--- a/src/estructura.html
+++ b/src/estructura.html
@@ -12,9 +12,7 @@
         class="flex items-center justify-center h-24 col-span-1 bg-orange-200"
         >menu</menu
       >
-      <div
-        class="grid grid-cols-3 col-span-4 gap-2 p-2 bg-pink-300 bg-pink-900"
-      >
+      <div class="grid grid-cols-3 col-span-4 gap-2 p-2 bg-pink-900">
         <div class="bg-purple-300 rounded">uno</div>
         <div class="bg-purple-300 rounded">dos</div>
         <div class="bg-purple-300 rounded">tres</div>
