--- a/src/youtube.html
+++ b/src/youtube.html
@@ -6,17 +6,32 @@
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="flex justify-between bg-gray-800 h-14">
-      <div class="bg-slate-500">youtube</div>
+    <div class="p-2 flex justify-between items-center bg-gray-800 h-16">
+      <div class="flex p-1 items-center font-bold text-white">
+        <div class="p-1">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9e9e9e" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <line x1="4" y1="6" x2="20" y2="6" />
+            <line x1="4" y1="12" x2="20" y2="12" />
+            <line x1="4" y1="18" x2="20" y2="18" />
+          </svg>
+        </div>
+        <div class="p-1">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ff2825" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <rect x="3" y="5" width="18" height="14" rx="4" />
+            <path d="M10 9l5 3l-5 3z" />
+          </svg>
+        </div>
+        YouTube
+      </div>
       <div class="flex items-center">
         <input
           class="pl-2 bg-gray-700 border border-gray-500 rounded-l-full h-9"
           type="search"
           placeholder="Buscar"
         />
-        <div
-          class="flex items-center pl-4 pr-6 text-white bg-gray-700 border border-l-0 border-gray-500 rounded-r-full h-9"
-        >
+        <div class="flex items-center pl-4 pr-6 text-white bg-gray-700 border border-l-0 border-gray-500 rounded-r-full h-9">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -33,7 +48,17 @@
           </svg>
         </div>
       </div>
-      <div class="bg-slate-500">notificaciones</div>
+        <div class="border border-gray-600 rounded-l-full rounded-r-full h-9 p-3 flex items-center font-bold"> 
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <circle cx="12" cy="12" r="9" />
+            <circle cx="12" cy="10" r="3" />
+            <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
+          </svg>
+          <div class="text-sky-400 px-1">
+            Acceder
+          </div>
+        </div>
     </div>
   </body>
 </html>
